[[bin]]
bench = false
name = "nu_plugin_kdl"

[dependencies]
kdl = "4.6.0"
miette = "5.10.0"

[dependencies.nu-plugin]
path = ""
version = "0.89.0"

[dependencies.nu-protocol]
features = ["plugin"]
path = ""
version = "0.89.0"

[lib]
bench = false

[package]
authors = ["@amtoine"]
description = "Add support for the KDL data format to Nushell."
edition = "2021"
license = "GPLv3"
name = "nu_plugin_kdl"
repository = "https://github.com/amtoine/nu_plugin_kdl"
version = "0.89.0"
